This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

19-May-2004 (Lars Duening)  (3.3.552)
  - (comm.c) The H_NOECHO hook is now called only if the target object
      is not destructed.

19-May-2004 (Lars Duening)
  - (etc/savefile-parse.pl) Fini provided a Perl script (actually long time
      ago) which can read a LPMud savefile and recreate the data as
      Perl datastructures.

18-May-2004 (Lars Duening)  (3.3.551)
  - (simulate, backend.c, string_spec) Runtime errors are now also passed
      to the master function runtime_warning().

18-May-2004 (Lars Duening)  (3.3.550)
  - (efuns.c) Bah, forgot the 'MTRACE_ARG' to the call of
      mstring_cvt_progname(), so the file didn't compile when MALLOC_TRACE
       was enabled (reported by Ralph).

17-May-2004 (Lars Duening)  (3.3.549)
  - (efuns.c, closure) Efun get_type_info() can now return the name
       of the defining program for a lfun or context closure (Bug #0000010).
  - (configure) Removed double checks for stdint.h and inttypes.h .
  - (wiz_list.c) During a GC, the references for the error filename
       and message weren't cleared.
  - (gcollect) In general, string references weren't cleared during the
       GC (a holdover from when all strings were tabled).

16-May-2004 (Lars Duening)  (3.3.548)
  - (my-stdint.h) I checked for a subtly wrong define here, causing the
       compilation to break on Linux (reported by Ralph).
  - (configure, my-stdint.h) FreeBSD doesn't have stdint.h, but it
       has inttypes.h which serves mostly the same purpose (reported by
       Joseph).

15-May-2004 (Lars Duening)  (3.3.547)
  - (configure, my-stdint.h, sha1.h) Added a test for and a replacement
       of the C99 include file stdint.h, which is required by the sha1
       code (reported by Joseph).

14-May-2004 (Lars Duening)  (3.3.546)
  - (comm.c, simul_efun.c) Corrected compilation errors (thanks, Ralph!)
