@@ -28,7 +28,6 @@
 ;; TODO:: unbound_lambdas). This requires symbolic return values from
 ;; TODO:: all the setup_callback functions, as the positive values already
 ;; TODO:: signal errors in the arguments.
-;; TODO: warnf()s should go to the master as well.
 ;; TODO: member() should get start position.
 ;; TODO: "*"::function() should be able to take parameters
 ;; TODO: set_wizlist_score() to manually add name:score pairs to the wizlist,
@@ -62,19 +61,21 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 552)
-(Parent-Version lpmud 3-3 551)
+(Project-Version lpmud 3-3 553)
+(Parent-Version lpmud 3-3 552)
 (Version-Log "
-  - (comm.c) The H_NOECHO hook is now called only if the target object
-      is not destructed.
-  - (etc/savefile-parse.pl) Fini provided a Perl script (actually long time
-      ago) which can read a LPMud savefile and recreate the data as
-      Perl datastructures.
+  - (config.h.in) Oops, the AVL change to smalloc (3.3.534) was never activated.
+  - (smalloc.c) Small block allocated directly from a freelist didn't set
+       the GC_FREE flag. As this flag doubles as M_DEFRAG flag, many
+       blocks were accidentally considered 'permanent'.
+  - (object.c) When writing save files, only the names of structs
+       will use the shared-string notation. Other strings are given
+       literally for better readability (suggested by Coogan).
 ")
 (New-Version-Log
 ""
 )
-(Checkin-Time "Wed, 19 May 2004 19:08:32 -0600")
+(Checkin-Time "Thu, 20 May 2004 20:51:32 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -112,14 +113,14 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.11 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.76 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.615 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.616 644))
   (HISTORY (lpmud/f/49_HISTORY 1.354 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
   ;; Configuration
   (src/configure (lpmud/d/0_configure 1.19.1.105 755))
-  (src/config.h.in (lpmud/d/1_config.h 1.41.1.4.1.8.1.37 644))
+  (src/config.h.in (lpmud/d/1_config.h 1.41.1.4.1.8.1.38 644))
   (src/machine.h.in (lpmud/b/9_machine.h. 1.9.1.13 644))
   (src/Makefile.in (lpmud/d/17_Makefile.i 1.37.1.39.1.19.1.26 644))
   (src/mkinstalldirs (lpmud/c/4_mkinstalld 1.1 644))
@@ -221,7 +222,7 @@
   (src/my-rusage.h (lpmud/f/28_my-rusage. 1.7 644))
   (src/my-stdint.h (lpmud/u/b/39_my-stdint. 1.2 644))
   (src/object.h (lpmud/44_object.h 1.34.1.19.1.4 644))
-  (src/object.c (lpmud/45_object.c 1.62.1.88.1.42 644))
+  (src/object.c (lpmud/45_object.c 1.62.1.88.1.43 644))
   (src/otable.h (lpmud/f/27_otable.h 1.8.1.4 644))
   (src/otable.c (lpmud/43_otable.c 1.22.1.7 644))
   (src/parser.c (lpmud/l/13_parser.c 1.1 644))
@@ -301,7 +302,7 @@
   (src/simulate.h (lpmud/f/16_simulate.h 1.25.1.34 644))
   (src/simulate.c (lpmud/31_simulate.c 1.88.1.124 644))
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.14 644))
-  (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.94 644))
+  (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.95 644))
   (src/sysmalloc.h (lpmud/c/b/33_sysmalloc. 1.2 644))
   (src/sysmalloc.c (lpmud/c/b/34_sysmalloc. 1.6 644))
   (src/sprintf.h (lpmud/f/15_sprintf.h 1.3.1.4 644))
