@@ -1,11 +1,18 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+20-May-2004 (Lars Duening)  (3.3.553)
+  - (config.h.in) Oops, the AVL change to smalloc (3.3.534) was never activated.
+  - (smalloc.c) Small block allocated directly from a freelist didn't set
+       the GC_FREE flag. As this flag doubles as M_DEFRAG flag, many
+       blocks were accidentally considered 'permanent'.
+  - (object.c) When writing save files, only the names of structs
+       will use the shared-string notation. Other strings are given
+       literally for better readability (suggested by Coogan).
+
 19-May-2004 (Lars Duening)  (3.3.552)
   - (comm.c) The H_NOECHO hook is now called only if the target object
       is not destructed.
-
-19-May-2004 (Lars Duening)
   - (etc/savefile-parse.pl) Fini provided a Perl script (actually long time
       ago) which can read a LPMud savefile and recreate the data as
       Perl datastructures.
